--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask
-pymongo
 Flask-HTTPAuth
-Flask-JWT-Extended
 redis
+pymongo
+requests
+Flask-JWT-Extended
+swagger-ui-py
+Werkzeug==0.16
 nose
-coverage
