--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,16 @@
-#app:
-#  build: .
-#  command: python run.py
-#  ports:
-#    - "5000:5000"
-#  volumes:
-#    - .:/app
-#  links:
-#    - db
-#db:
-#  image: mongo:latest
-#  hostname: test_mongodb
-#  environment:
-#    - MONGO_INITDB_ROOT_USERNAME=root
-#    - MONGO_INITDB_ROOT_PASSWORD=pass
-#  volumes:
-#    - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
-#  ports:
-#    - 27017:27017
-
 version: '3'
-
 services:
-  mongo:
-    image: mongo
-    ports:
-      - '27017:27017'
   app:
     build:
       context: .
+      dockerfile: Dockerfile
     ports:
-      - '5000:5000'
+      - 5000:5000
+    volumes:
+      - ./app:/app
     depends_on:
       - mongo
+  mongo:
+    image: mongo:latest
+    ports:
+      - 27017:27017
